# subs

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: app.rs  core.rs  lib.rs  storage.rs
core/tests/: fabric.rs  full_e2e.rs  integration.rs  test_vectors.rs
examples/registry-server/: Cargo.toml  README.md
examples/registry-server/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
program/: Cargo.toml
program/src/: guest.rs  lib.rs
prover/: Cargo.toml
prover/src/: lib.rs  main.rs  server.rs
registry/src/: main.rs
subs/: Cargo.toml
subs/src/: app.rs  background.rs  config.rs  handle.rs  lib.rs  main.rs  state.rs  testrig.rs
subs/src/routes/: certs.rs  commits.rs  config.rs  console.rs  error.rs  mod.rs  proving.rs  query.rs  registry.rs  requests.rs  status.rs  web.rs
subs/templates/: base.html  dashboard.html  handle.html  operate.html  query.html  settings.html  space.html  transactions.html
types/: Cargo.toml
types/src/: lib.rs
