[workspace]
resolver = "2"
members = ["core", "prover", "types", "subs", "examples/registry-server"]

[workspace.dependencies]
# Internal crates
subs-types = { path = "types" }
subs-prover = { path = "prover" }
subs-core = { path = "core" }

# libveritas / fabric / spacedb / relay
libveritas = { version = "=0.1.2", features = ["elf"] }
libveritas_zk = "=0.1.1"
libveritas_testutil = "=0.1.2"
spacedb = "0.1"
relay = { git = "https://github.com/spacesprotocol/certrelay.git" }
fabric = { package = "fabric-resolver", version = "=0.1.2" }

# Spaces protocol crates
spaces_protocol = { version = "0.1", features = ["std"] }
spaces_nums = { version = "0.1", features = ["std"] }
spaces_client = { version = "0.1" }
spaces_wallet = "0.1"
spaces_testutil = { git = "https://github.com/spacesprotocol/spaces.git", branch = "subspaces" }

# Common third-party deps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
borsh = { version = "1.5", default-features = false, features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
bitcoin = { version = "0.32.2", features = ["rand-std"] }
rusqlite = { version = "0.31", features = ["bundled"] }
risc0-zkvm = { version = "3.0.5", features = ["std"] }
tempfile = "3"