[package]
name = "program"
version = "0.1.0"
edition = "2024"

[dependencies]
# zk-vm guest depedencies
spacedb = { git = "https://github.com/spacesprotocol/spacedb.git", branch = "main", default-features = false }
bincode = {  version = "2.0.0-rc.3", default-features = false, features = ["alloc", "derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = "=0.10.6"
