[package]
name = "subs-prover"
version = "0.1.0"
edition = "2021"
description = "ZK prover for subs - generates STARK/SNARK proofs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subs-prover"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { workspace = true, features = ["prove"] }
libveritas = { workspace = true }
libveritas_zk = { workspace = true }
subs-types = { workspace = true }
spacedb = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[features]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
default = []