[package]
name = "subs"
version = "0.1.0"
edition = "2021"
description = "HTTP REST API server for subs operations"
default-run = "subs"

[[bin]]
name = "subs"
path = "src/main.rs"

[dependencies]
subs-core = { workspace = true }
subs-types = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
reqwest = { workspace = true, features = ["rustls-tls"] }
hex = { workspace = true }
askama = "0.12"
askama_axum = "0.4"
spaces_client = { workspace = true }
spaces_protocol = { workspace = true }
spaces_wallet = { workspace = true, optional = true }
spaces_testutil = { workspace = true, optional = true }
bitcoin = { workspace = true }
borsh = { workspace = true }
rusqlite = { workspace = true }


relay = { workspace = true, optional = true }

[features]
default = []
test-rig = ["dep:spaces_testutil", "dep:spaces_wallet", "dep:relay"]