[package]
name = "registry-server"
version = "0.1.0"
edition = "2021"
description = "Example registry server for subs handle registration"
publish = false

[[bin]]
name = "registry-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }