[package]
name = "subspaces"
version = "0.1.2"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.1", default-features = false, features = ['std'] }
program = { path = "../../program", default-features = false }

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
